--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Note</string>
-    <string name="subtitle_format">%1$s cirmes</string>
-    <string name="crime_report">%1$s!Your crime was discovered.</string>
+    <string name="subtitle_format">%1$s note</string>
+    <string name="crime_report">%1$s!Share a funny picture with you.</string>
     <plurals name="subtitle_plural">
-        <item quantity="one">%1$s crime</item>
-        <item quantity="other">%1$s crimes</item>
+        <item quantity="one">%1$s note</item>
+        <item quantity="other">%1$s notes</item>
     </plurals>
 </resources>
